# stop-names

./: .gitignore  Cargo.toml  README.md  flake.nix  graph-json.nix  graph.json  json2kml.py  osm-buses.sh  osm-trams.sh  stops-json.nix  stops.json  stops.kml  trams.json
graph_generator/: Cargo.toml
graph_generator/src/: main.rs  telegram.rs
runalyzer/: Cargo.toml  REAMDE.md
runalyzer/src/: known_stops.rs  main.rs  osm_lines.rs  segments.rs  telegram.rs
src/: lib.rs  tests.rs
