[package]
name = "stop-names"
version = "0.3.1"
edition = "2021"
authors = [ "Tassilo Tanneberger <revol-xut@protonmail.com>" ]
homepage = "https://github.com/dump-dvb/stop-names"

[dependencies]
serde_json = "1.0"
serde = {version = "*", features = ["derive"]}
chrono = { version = "0.4", features = [ "serde" ]}
